# django-strip-api

./: README.md  pyproject.toml  requirements.txt
myproject/config/: settings.py  urls.py
myproject/fixtures/: db.json
myproject/myapp/: admin.py  models.py  urls.py  views.py
myproject/myapp/migrations/: 0001_initial.py
myproject/myapp/templates/myapp/: canceled.html  completed.html  item_detail.html
